--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             width="16px"
             height="12px"
             viewBox="0 0 100 100" 
-            class="icon shape-codepen">
+            >
               <use xlink:href="../images/sprite.svg#icon-mail"></use>
               </svg>info@devstudio.com</a>
      </li>
@@ -49,7 +49,7 @@
             width="15px"
             height="16px"
             viewBox="0 0 100 100" 
-            class="icon shape-codepen">
+            >
               <use xlink:href="../images/sprite.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11 </a>
      </li>
@@ -79,7 +79,7 @@
                     <svg  
                     class="quality-icon"
                     width="70px"
-                    hight="70px"
+                    height="70px"
                     viewBox="0 0 100 100" 
                     >
                  <use xlink:href="../images/sprite.svg#icon-Group"></use>
@@ -93,7 +93,7 @@
                     <svg  
                     class="quality-icon"
                     width="70px"
-                    hight="70px"
+                    height="70px"
                     viewBox="0 0 100 100" 
                     >
                  <use xlink:href="../images/sprite.svg#icon-clock"></use>
@@ -107,7 +107,7 @@
                     <svg  
                     class="quality-icon"
                     width="70px"
-                    hight="70px"
+                    height="70px"
                     viewBox="0 0 100 100" 
                     >
                  <use xlink:href="../images/sprite.svg#icon-diagram"></use>
@@ -121,7 +121,7 @@
                     <svg  
                     class="quality-icon"
                     width="70px"
-                    hight="70px"
+                    height="70px"
                     viewBox="0 0 100 100" 
                     >
                  <use xlink:href="../images/sprite.svg#icon-astronaut"></use>
@@ -164,25 +164,25 @@
                       <p class="team-position">Product Designer</p>
                       <ul class="team-social">
                         <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                             <svg 
                             class="social-icon"
                         
                             viewBox="0 0 100 100" 
                             width="20px"
                             
-                            class="icon shape-codepen">
+                            >
                              <use xlink:href="../images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-twitter">
 
                              </use>
@@ -190,12 +190,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-facebook">
 
                              </use>
@@ -203,12 +203,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg
                                 class="social-icon" 
                                 viewBox="0 0 100 100"
                                 width="20" 
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-linkedin">
 
                              </use>
@@ -225,23 +225,23 @@
                         <p class="team-position">Developer</p>
                         <ul class="team-social">
                         <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                             <svg 
                             class="social-icon"
                             viewBox="0 0 100 100" 
                             width="20"
-                            class="icon shape-codepen">
+                            >
                              <use xlink:href="../images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-twitter">
 
                              </use>
@@ -249,12 +249,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-facebook">
 
                              </use>
@@ -262,12 +262,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg
                                 class="social-icon" 
                                 viewBox="0 0 100 100"
                                 width="20" 
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-linkedin">
 
                              </use>
@@ -285,23 +285,23 @@
                         <p class="team-position">Marketing</p>
                         <ul class="team-social">
                         <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                             <svg
                             class="social-icon" 
                             viewBox="0 0 100 100" 
                             width="20"
-                            class="icon shape-codepen">
+                            >
                              <use xlink:href="../images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-twitter">
 
                              </use>
@@ -309,12 +309,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-facebook">
 
                              </use>
@@ -322,12 +322,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg
                                 class="social-icon" 
                                 viewBox="0 0 100 100"
                                 width="20" 
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-linkedin">
 
                              </use>
@@ -344,23 +344,23 @@
                         <p class="team-position">UI Designer</p>
                         <ul class="team-social">
                         <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                             <svg
                             class="social-icon" 
                             viewBox="0 0 100 100" 
                             width="20"
-                            class="icon shape-codepen">
+                            >
                              <use xlink:href="../images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg
                                 class="social-icon" 
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-twitter">
 
                              </use>
@@ -368,12 +368,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg 
                                 class="social-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-facebook">
 
                              </use>
@@ -381,12 +381,12 @@
                             </a>
                         </li>
                          <li class="social-item">
-                            <a href=""class="link">
+                            <a href="" class="link">
                                 <svg
                                 class="social-icon" 
                                 viewBox="0 0 100 100"
                                 width="20" 
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-linkedin">
 
                              </use>
@@ -411,7 +411,7 @@
                 <a href="" class="link"><svg
                     class="icon-client" 
                     width="106px"
-                    hight="60px"
+                    height="60px"
                     viewBox="0 0 100 100" 
                     >
   <use xlink:href="../images/sprite.svg#icon-company1"></use>
@@ -421,47 +421,47 @@
                 <a href="" class="link"><svg
                     class="icon-client"
                     width="106px"
-                    hight="60px"
+                    height="60px"
                      viewBox="0 0 100 100" 
                      >
   <use xlink:href="../images/sprite.svg#icon-company2"></use>
 </svg></a>
             </li>
             <li class="item">
-                <a href=""class="link"><svg
+                <a href="" class="link"><svg
                     class="icon-client" 
                     width="106px"
-                    hight="60px"
+                    height="60px"
                     viewBox="0 0 100 100" 
                     >
   <use xlink:href="../images/sprite.svg#icon-company3"></use>
 </svg></a>
             </li>
             <li class="item">
-                <a href=""class="link"><svg
+                <a href="" class="link"><svg
                     class="icon-client"
                     width="106px"
-                    hight="60px" 
+                    height="60px" 
                     viewBox="0 0 100 100" 
                     >
   <use xlink:href="../images/sprite.svg#icon-company4"></use>
 </svg></a>
             </li>
             <li class="item">
-                <a href=""class="link"><svg
+                <a href="" class="link"><svg
                     class="icon-client" 
                     width="106px"
-                    hight="60px" 
+                    height="60px" 
                     viewBox="0 0 100 100"
                      >
   <use xlink:href="../images/sprite.svg#icon-company5"></use>
 </svg></a>
             </li>
             <li class="item">
-                <a href=""class="link"><svg
+                <a href="" class="link"><svg
                     class="icon-client"
                     width="106px"
-                    hight="60px" 
+                    height="60px" 
                     viewBox="0 0 100 100" 
                     >
   <use xlink:href="../images/sprite.svg#icon-company6"></use>
@@ -496,23 +496,23 @@
     </strong>
     <ul class="footer-social">
         <li class="item">
-            <a href=""class="link">
+            <a href="" class="link">
                             <svg
                             class="footer-icon" 
                             viewBox="0 0 100 100" 
                             width="20"
-                            class="icon shape-codepen">
+                            >
                              <use xlink:href="../images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
          </li>
         <li class="item">
-            <a href=""class="link">
+            <a href="" class="link">
                                 <svg
                                 class="footer-icon" 
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-twitter">
 
                              </use>
@@ -520,12 +520,12 @@
                             </a>
             </li>
         <li class="item">
-            <a href=""class="link">
+            <a href="" class="link">
                                 <svg 
                                 class="footer-icon"
                                 viewBox="0 0 100 100" 
                                 width="20"
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-facebook">
 
                              </use>
@@ -533,12 +533,12 @@
                             </a>
             </li>
         <li class="item"> 
-            <a href=""class="link">
+            <a href="" class="link">
                                 <svg
                                 class="footer-icon" 
                                 viewBox="0 0 100 100"
                                 width="20" 
-                                class="icon shape-codepen">
+                                >
                              <use xlink:href="../images/sprite.svg#icon-linkedin">
 
                              </use>
