--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             height="12px"
             viewBox="0 0 100 100" 
             >
-              <use xlink:href="../images/sprite.svg#icon-mail"></use>
+              <use xlink:href="./images/sprite.svg#icon-mail"></use>
               </svg>info@devstudio.com</a>
      </li>
      <li class="item">
@@ -50,7 +50,7 @@
             height="16px"
             viewBox="0 0 100 100" 
             >
-              <use xlink:href="../images/sprite.svg#icon-smartphone"></use>
+              <use xlink:href="./images/sprite.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11 </a>
      </li>
      </ul>
