--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     height="70px"
                     viewBox="0 0 100 100" 
                     >
-                 <use xlink:href="../images/sprite.svg#icon-Group"></use>
+                 <use xlink:href="./images/sprite.svg#icon-Group"></use>
                   </svg>
                 </div>
                 <h3 class="quality-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -96,7 +96,7 @@
                     height="70px"
                     viewBox="0 0 100 100" 
                     >
-                 <use xlink:href="../images/sprite.svg#icon-clock"></use>
+                 <use xlink:href="./images/sprite.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <h3 class="quality-title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -110,7 +110,7 @@
                     height="70px"
                     viewBox="0 0 100 100" 
                     >
-                 <use xlink:href="../images/sprite.svg#icon-diagram"></use>
+                 <use xlink:href="./images/sprite.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <h3 class="quality-title">ПЛАНУВАННЯ</h3>
@@ -124,7 +124,7 @@
                     height="70px"
                     viewBox="0 0 100 100" 
                     >
-                 <use xlink:href="../images/sprite.svg#icon-astronaut"></use>
+                 <use xlink:href="./images/sprite.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <h3 class="quality-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -172,7 +172,7 @@
                             width="20px"
                             
                             >
-                             <use xlink:href="../images/sprite.svg#icon-instagram"></use>
+                             <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
@@ -183,7 +183,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-twitter">
+                             <use xlink:href="./images/sprite.svg#icon-twitter">
 
                              </use>
                               </svg>
@@ -196,7 +196,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-facebook">
+                             <use xlink:href="./images/sprite.svg#icon-facebook">
 
                              </use>
                               </svg>
@@ -209,7 +209,7 @@
                                 viewBox="0 0 100 100"
                                 width="20" 
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-linkedin">
+                             <use xlink:href="./images/sprite.svg#icon-linkedin">
 
                              </use>
                               </svg>
@@ -231,7 +231,7 @@
                             viewBox="0 0 100 100" 
                             width="20"
                             >
-                             <use xlink:href="../images/sprite.svg#icon-instagram"></use>
+                             <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
@@ -242,7 +242,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-twitter">
+                             <use xlink:href="./images/sprite.svg#icon-twitter">
 
                              </use>
                               </svg>
@@ -255,7 +255,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-facebook">
+                             <use xlink:href="./images/sprite.svg#icon-facebook">
 
                              </use>
                               </svg>
@@ -268,7 +268,7 @@
                                 viewBox="0 0 100 100"
                                 width="20" 
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-linkedin">
+                             <use xlink:href="./images/sprite.svg#icon-linkedin">
 
                              </use>
                               </svg>
@@ -291,7 +291,7 @@
                             viewBox="0 0 100 100" 
                             width="20"
                             >
-                             <use xlink:href="../images/sprite.svg#icon-instagram"></use>
+                             <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
@@ -302,7 +302,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-twitter">
+                             <use xlink:href="./images/sprite.svg#icon-twitter">
 
                              </use>
                               </svg>
@@ -315,7 +315,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-facebook">
+                             <use xlink:href="./images/sprite.svg#icon-facebook">
 
                              </use>
                               </svg>
@@ -328,7 +328,7 @@
                                 viewBox="0 0 100 100"
                                 width="20" 
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-linkedin">
+                             <use xlink:href="./images/sprite.svg#icon-linkedin">
 
                              </use>
                               </svg>
@@ -350,7 +350,7 @@
                             viewBox="0 0 100 100" 
                             width="20"
                             >
-                             <use xlink:href="../images/sprite.svg#icon-instagram"></use>
+                             <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
                         </li>
@@ -361,7 +361,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-twitter">
+                             <use xlink:href="./images/sprite.svg#icon-twitter">
 
                              </use>
                               </svg>
@@ -374,7 +374,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-facebook">
+                             <use xlink:href="./images/sprite.svg#icon-facebook">
 
                              </use>
                               </svg>
@@ -387,7 +387,7 @@
                                 viewBox="0 0 100 100"
                                 width="20" 
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-linkedin">
+                             <use xlink:href="./images/sprite.svg#icon-linkedin">
 
                              </use>
                               </svg>
@@ -414,7 +414,7 @@
                     height="60px"
                     viewBox="0 0 100 100" 
                     >
-  <use xlink:href="../images/sprite.svg#icon-company1"></use>
+  <use xlink:href="./images/sprite.svg#icon-company1"></use>
 </svg></a>
             </li>
             <li class="item">
@@ -424,7 +424,7 @@
                     height="60px"
                      viewBox="0 0 100 100" 
                      >
-  <use xlink:href="../images/sprite.svg#icon-company2"></use>
+  <use xlink:href="./images/sprite.svg#icon-company2"></use>
 </svg></a>
             </li>
             <li class="item">
@@ -434,7 +434,7 @@
                     height="60px"
                     viewBox="0 0 100 100" 
                     >
-  <use xlink:href="../images/sprite.svg#icon-company3"></use>
+  <use xlink:href="./images/sprite.svg#icon-company3"></use>
 </svg></a>
             </li>
             <li class="item">
@@ -444,7 +444,7 @@
                     height="60px" 
                     viewBox="0 0 100 100" 
                     >
-  <use xlink:href="../images/sprite.svg#icon-company4"></use>
+  <use xlink:href="./images/sprite.svg#icon-company4"></use>
 </svg></a>
             </li>
             <li class="item">
@@ -454,7 +454,7 @@
                     height="60px" 
                     viewBox="0 0 100 100"
                      >
-  <use xlink:href="../images/sprite.svg#icon-company5"></use>
+  <use xlink:href="./images/sprite.svg#icon-company5"></use>
 </svg></a>
             </li>
             <li class="item">
@@ -464,7 +464,7 @@
                     height="60px" 
                     viewBox="0 0 100 100" 
                     >
-  <use xlink:href="../images/sprite.svg#icon-company6"></use>
+  <use xlink:href="./images/sprite.svg#icon-company6"></use>
 </svg>
 </a>
             </li>
@@ -502,7 +502,7 @@
                             viewBox="0 0 100 100" 
                             width="20"
                             >
-                             <use xlink:href="../images/sprite.svg#icon-instagram"></use>
+                             <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
          </li>
@@ -513,7 +513,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-twitter">
+                             <use xlink:href="./images/sprite.svg#icon-twitter">
 
                              </use>
                               </svg>
@@ -526,7 +526,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-facebook">
+                             <use xlink:href="./images/sprite.svg#icon-facebook">
 
                              </use>
                               </svg>
@@ -539,7 +539,7 @@
                                 viewBox="0 0 100 100"
                                 width="20" 
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-linkedin">
+                             <use xlink:href="./images/sprite.svg#icon-linkedin">
 
                              </use>
                               </svg>
