--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             height="12px"
             viewBox="0 0 100 100" 
             >
-              <use xlink:href="../images/sprite.svg#icon-mail"></use>
+              <use xlink:href="./images/sprite.svg#icon-mail"></use>
               </svg>info@devstudio.com</a>
      </li>
      <li class="item">
@@ -49,7 +49,7 @@
             height="16px"
             viewBox="0 0 100 100" 
             >
-              <use xlink:href="../images/sprite.svg#icon-smartphone"></use>
+              <use xlink:href="./images/sprite.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11 </a>
      </li>
      </ul>
@@ -212,7 +212,7 @@
                             viewBox="0 0 100 100" 
                             width="20"
                             >
-                             <use xlink:href="../images/sprite.svg#icon-instagram"></use>
+                             <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                               </svg>
                             </a>
          </li>
@@ -223,7 +223,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-twitter">
+                             <use xlink:href="./images/sprite.svg#icon-twitter">
 
                              </use>
                               </svg>
@@ -236,7 +236,7 @@
                                 viewBox="0 0 100 100" 
                                 width="20"
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-facebook">
+                             <use xlink:href="./images/sprite.svg#icon-facebook">
 
                              </use>
                               </svg>
@@ -249,7 +249,7 @@
                                 viewBox="0 0 100 100"
                                 width="20" 
                                 >
-                             <use xlink:href="../images/sprite.svg#icon-linkedin">
+                             <use xlink:href="./images/sprite.svg#icon-linkedin">
 
                              </use>
                               </svg>
