--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </svg>info@devstudio.com</a>
      </li>
      <li class="item">
-        <a href="tel:+380961111111" class="tell">
+        <a href="tel:+380961111111" class="link">
             <svg 
             class="icon-contacte"
             width="15px"
